Bug 152950 - Calc sort crashes after changing from default language to a different one
Summary: Calc sort crashes after changing from default language to a different one
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.0.6.2 release
Hardware: x86-64 (AMD64) Linux (All)
: high major
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.6.0 target:7.4.6 target:7.5.0.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Sorting
  Show dependency treegraph
 
Reported: 2023-01-09 20:28 UTC by maupertuis
Modified: 2023-04-10 08:19 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
file to crash calc when sorting (16.60 KB, application/vnd.oasis.opendocument.spreadsheet)
2023-01-09 20:28 UTC, maupertuis
Details

Note You need to log in before you can comment on or make changes to this bug.
Description maupertuis 2023-01-09 20:28:01 UTC
Created attachment 184546 [details]
file to crash calc when sorting

Calc crashes each time I try to sort if I change from the language from default to greek.
It happens also in safe mode with  default settings and all extensions disabled.
It can be reproduce using the small file attached.
Just select the whole clumns A:B
data -> sort 
options : language greek
sort criteria : column A

Hitting the ok button crashes Calc

Please let me know if I can help in any way
Comment 1 maupertuis 2023-01-09 20:31:12 UTC
the version used is the one shipped with Fedora 36
Comment 2 m_a_riosv 2023-01-09 21:12:39 UTC
Doesn't crash for me.
Version: 7.4.4.1 (x64) / LibreOffice Community
Build ID: 988f4a351a6fa8cf4bdf2bdc873ca12cf8cbe625
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: default; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL

Please test with a clean profile, Menu/Help/Restart in Safe Mode
Comment 3 maupertuis 2023-01-09 21:49:05 UTC
As mentioned in the first post, I did try in safe mode.
The result was the same
Comment 4 stragu 2023-01-10 08:47:11 UTC
Yes, it crashes for me too as I click back on Sort Criteria (or click OK) after changing the language to any other language I tried.

No need to use the example document:
1. Open Calc
2. Data > Sort... > Options
3. Change language
4. Click Sort Criteria tab or OK

I could not get LO to generate a crash report.

Version: 7.3.7.2 / LibreOffice Community
Build ID: e114eadc50a9ff8d8c8a0567d6da8f454beeb84f
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Also in:
Version: 7.0.6.2
Build ID: 144abb84a525d8e30c9dbbefa69cbbf2d8d4ae3b
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Version: 7.4.3.2 / LibreOffice Community
Build ID: 1048a8393ae2eeec98dff31b5c133c5f1d08b890
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Version: 7.5.0.1 (X86_64) / LibreOffice Community
Build ID: 77cd3d7ad4445740a0c6cf977992dafd8ebad8df
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 894efac210a3871214d95a52c322b0bee40f00ba
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

But not in:

Version: 6.4.7.2
Build ID: 639b8ac485750d5696d7590a72ef1b496725cfb5
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3; 
Locale: en-AU (en_AU.UTF-8); UI-Language: en-US
Calc: threaded

Does not crash on Windows 10.

So it's a regression.
Comment 5 maupertuis 2023-01-10 09:41:14 UTC
I have update my fedora to fedora 37 to get libreoffice-7.4.3.2-1.
It crashes
Comment 6 stragu 2023-01-10 09:47:47 UTC
Bibisected with linux-64-7.0 repo to first bad commit:

commit bc0e0f633b05c4f91b6695488fc9e5c127507ba5
author	Caolán McNamara <caolanm@redhat.com>	Thu Apr 09 11:41:00 2020 +0100
committer	Caolán McNamara <caolanm@redhat.com>	Thu Apr 16 20:28:24 2020 +0200
tree cca168c8aced9207ffa877693b856440764de341
parent de1dadd591862e38242cc2de7a4a658a9a8b67ac
tdf#131120 use a replacement for GtkComboBox
Change-Id: I1b6164020996377341b5992d593a027b76021f65
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/91990

Caolán, can you please have a look?
Comment 7 Commit Notification 2023-01-10 19:57:36 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/13810281fe1297833a849bf5adea0be8ea77ca88

Resolves: tdf#152950 don't set_active while frozen

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2023-01-10 19:57:39 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2ee09316dcd09caf5dd13894de484804d3464172

Related: tdf#152950 assert if this arises anywhere else

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Caolán McNamara 2023-01-10 19:58:20 UTC
done in trunk, backports to 7-5 and 7-4 in gerrit
Comment 10 Commit Notification 2023-01-11 10:10:06 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/9476a2c29baf8dc7880fc1ae7657a3a69df8b429

Resolves: tdf#152950 don't set_active while frozen

It will be available in 7.4.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2023-01-12 08:23:02 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/34789a2a7678435b142165647aba20b55c086fcb

Resolves: tdf#152950 don't set_active while frozen

It will be available in 7.5.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 stragu 2023-01-12 08:41:52 UTC
Fix verified in:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 92deea6301a02f5530f17263f58402344f82013c
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Thank you maupertuis and Caolán!
Comment 13 Xisco Faulí 2023-01-24 10:36:18 UTC
7.4.5 was a hotfix release, updating target in status-whiteboard